[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "function-grapher"
version = "0.1.0"
description = "A simple CLI tool to graph functions"
requires-python = ">=3.9"
dependencies = [
    "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
function_grapher = "function_grapher.main:main"